// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render <h1> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 38,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h1> tag by default 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 38,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h2> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 22,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h3> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 16.666666666666664,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h4> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 14,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h5> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 12.4,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render <h6> tag 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 11.333333333333332,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render correctly 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 38,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;

exports[`Heading should render innerHTML 1`] = `
<Text
  style={
    [
      {
        "fontWeight": "700",
        "margin": 0,
        "textAlign": "left",
        "textTransform": "uppercase",
        "width": "100%",
      },
      {
        "fontSize": 38,
      },
    ]
  }
  testID="heading"
>
  Testing
</Text>
`;
